Fix a CSS collision by forcing list-groups to be left aligned
Fixes #50

--- a/app/renderer/patterns-common/common.css
+++ b/app/renderer/patterns-common/common.css
@@ -6,6 +6,10 @@
   --font-patternbot-code: "Source Code Pro", monospace;
 }
 
+.patternbot-list-group {
+  text-align: left;
+}
+
 .patternbot-list-group > li::before {
   content: "";
   display: none;
